# rustapi

./: .gitignore  Cargo.toml  docker-compose.yaml  schema.sql
src/: main.rs
src/handlers/: mod.rs  signin_handler.rs  signup_handler.rs
src/models/: errors.rs  mod.rs  user_entity.rs  user_repository.rs
src/repository/: user_repository.rs
src/services/: user_service.rs
