[package]
name = "rustapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2"] }
axum-server = "0.7.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.220", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.41"
async-trait = "0.1.89"
uuid = { version = "1.18.1", features = ["v7"] }
bcrypt = "0.17.1"
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "connection-manager"] }
josekit = "0.10.3"
openssl = { version = "0.10", features = ["vendored"] }